syntax = "proto3";

package job;

service JobService {
  rpc GetJob(GetJobRequest) returns (JobResponse);
  rpc CreateJob(CreateJobRequest) returns (JobResponse);
  rpc UpdateJob(UpdateJobRequest) returns (JobResponse);
  rpc DeleteJob(DeleteJobRequest) returns (JobResponse);
}

message GetJobRequest {
  string id = 1;
}

message CreateJobRequest {
  string title = 1;
  string description = 2;
  string companyId = 3;
}

message UpdateJobRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string companyId = 4;
}

message DeleteJobRequest {
  string id = 1;
}

message JobResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string companyId = 4;
}
